# openai-realtime-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  COMPLETE_UNDERSTANDING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  REPOSITORY_STRUCTURE.md  package.json  pnpm-lock.yaml  poopset.txt
apps/web/: package.json  tsconfig.json
apps/web/app/: root.tsx  routes.ts
apps/web/app/components/session/: circular-progress.tsx  conversation-view.tsx  session-status-panel.tsx  subtopics-panel.tsx
apps/web/app/components/ui/: icon-badge.tsx
apps/web/app/layouts/: app-shell.tsx
apps/web/app/lib/: feynman-client.tsx
apps/web/app/providers/: feynman-provider.tsx  mock-data-provider.tsx
apps/web/app/routes/: dashboard.tsx  home.tsx  legacy-session.tsx  new-session.tsx  not-found.tsx  session-detail.tsx  sessions-list.tsx  settings.tsx  topics.tsx
crates/core/: Cargo.toml
crates/core/src/: agent.rs  gemini_reviewer.rs  generic_types.rs  lib.rs  realtime_api.rs  reviewer.rs  session_state.rs  topic.rs
crates/gemini-realtime/: Cargo.toml
crates/gemini-realtime/src/: client.rs  lib.rs  types.rs
crates/native-utils/: Cargo.toml
crates/native-utils/src/: audio.rs  device.rs
crates/openai-realtime/: Cargo.toml
crates/openai-realtime-types/: Cargo.toml
crates/openai-realtime-types/src/: audio.rs  content.rs  lib.rs
crates/openai-realtime-types/src/audio/: consts.rs  transcription.rs  turn_detection.rs
crates/openai-realtime-types/src/content/: items.rs  parts.rs
crates/openai-realtime-types/src/events/: client.rs
crates/openai-realtime-types/src/events/server/: resources.rs
crates/openai-realtime/src/: client.rs  lib.rs
crates/openai-realtime/src/client/: config.rs  utils.rs
examples/: audio_to_audio.rs  devices.rs  hello.rs  voice.rs
feynman-app/: Cargo.toml
feynman-app/src/: analyzer.rs  main.rs  reviewer.rs  sessionState.rs  session_state.rs  topic.rs
services/api/: Cargo.toml
services/api/src/: config.rs  main.rs
services/feynman/: Cargo.toml  build.rs  grinchset_old.txt
services/feynman/examples/: devices.rs  hello.rs  voice.rs
services/feynman/prompts/: analyze_answer.md  analyze_last_explained_context.md  analyze_topic.md  check_answer_satisfies_question.md  generate_subtopics.md  looks_like_topic_change.md
services/feynman/src/: config.rs  gemini_adapter.rs  lib.rs  main.rs  openai_adapter.rs  prompt_loader.rs
src/: client.rs  lib.rs
src/client/: config.rs  consts.rs  stats.rs  utils.rs
types/: Cargo.toml
types/src/: content.rs  events.rs  lib.rs  session.rs  tools.rs
types/src/audio/: consts.rs  transcription.rs  turn_detection.rs
types/src/content/: items.rs  message.rs  parts.rs
types/src/events/: client.rs  server.rs
types/src/events/server/: error.rs  resources.rs
utils/: Cargo.toml
utils/src/: audio.rs  device.rs  lib.rs
