[package]
name = "feynman"
version = "0.0.3"
edition = "2024"

[workspace]
members = [ "crates/openai-realtime", "crates/openai-realtime-types", "crates/native-utils", "feynman-app", "crates/core"]

[dev-dependencies]
feynman-native-utils = { path = "./crates/native-utils" }
openai-realtime-types = { path = "./crates/openai-realtime-types" }
openai-realtime = { path = "./crates/openai-realtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
dotenvy = { workspace = true }
cpal = { version = "0.15.3"}
anyhow = "1"
ringbuf = "0.4.7"
rubato = "0.16"

[workspace.dependencies]
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
dotenvy = { version = "0.15" }
clap = { version = "4", features = ["derive", "cargo"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[example]]
name = "voice"
path = "examples/voice.rs"

