[package]
name = "feynman-app"
version = "0.1.0"
edition = "2024"


[dependencies]
openai-realtime = { path = "../crates/openai-realtime" , features = ["utils"]}
cpal = "0.15.3"
ringbuf = "0.4.7"
tokio = { version = "1", features = ["full"] }
rubato = "0.16"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = {workspace =true}
fuzzy-matcher = "0.3"