[package]
name = "openai-realtime-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {workspace = true}
rubato = "0.16"
anyhow = "1"
base64 = "0.22"
ringbuf = "0.4.7"
cpal = { version = "0.15.3", features = ["asio"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.15.3", features = ["asio"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
cpal = "0.15.3"