[package]
name = "feynman-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
fuzzy-matcher = "0.3.7"
reqwest = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
openai-realtime = { path = "../../crates/openai-realtime" }
openai-realtime-types = { path = "../../crates/openai-realtime-types" }