[package]
name = "openai-realtime"
version = "0.1.0"
edition = "2024"


[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
utils = ["feynman-native-utils"]

[dependencies]
openai-realtime-types = { path = "../openai-realtime-types" }
feynman-native-utils = { path = "../native-utils", optional = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true}
secrecy = { version = "0.10", features = ["serde"]}
anyhow = { workspace = true }


[dev-dependencies]
feynman-native-utils = { path = "../native-utils" }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
dotenvy = { workspace = true }
cpal = { version = "0.15.3"}
anyhow = { workspace = true }
ringbuf = "0.4.7"
rubato = "0.16"
hound = "3.5"
