[package]
name = "openai-realtime"
version = "0.1.0"
edition = "2024"


[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
openai-realtime-types = { path = "../openai-realtime-types" }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true}
secrecy = { version = "0.10", features = ["serde"]}
anyhow = { workspace = true }
async-trait = { workspace = true }