[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { workspace = true }
anyhow = { workspace = true }

axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
