[package]
name = "feynman-api"
version = "0.1.0"
edition = "2024"

[dependencies]
feynman-core = { path = "../../crates/core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["client", "server"] }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"


# temporary
feynman-service = { path = "../feynman" }