[package]
name = "feynman-service"
version = "0.1.0"
edition = "2024"


[dependencies]
feynman-core = { path = "../../crates/core" }
feynman-native-utils = { path = "../../crates/native-utils" }
openai-realtime = { path = "../../crates/openai-realtime" }
cpal = "0.15.3"
ringbuf = "0.4.7"
tokio = { version = "1", features = ["full"] }
rubato = "0.16"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
anyhow = { workspace = true }
clap  = { workspace = true }
thiserror = "2.0.12"
async-trait = { workspace = true }


[dev-dependencies]
tempfile = "3.20.0"
mockall = "0.13.1"